--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@
  * user guide available at https://docs.gradle.org/2.12/userguide/tutorial_java_projects.html
  */
 
-/*
+
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
 
@@ -20,8 +20,8 @@ version = '0.0.1'
 repositories {
     // Use 'jcenter' for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
-    //jcenter()
-    mavenCentral()
+    jcenter()
+    //mavenCentral()
 }
 
 sourceSets {
@@ -38,12 +38,13 @@ dependencies {
 
     compile 'com.alibaba:fastjson:1.1.26'
 
-    compile 'org.apache:poi:3.13'
-    compile 'org.apache:poi-ooxml:3.13'
-    compile 'org.apache:poi-schemas:3.13'
-    compile 'org.apache:poi-scratchpad:3.13'
-    compile 'org.apache:log4j:1.1.3'
-    compile 'org.apache:commons-lang:2.1'
+    compile 'org.apache.poi:poi:3.13'
+    compile 'org.apache.poi:poi-ooxml:3.13'
+    compile 'org.apache.poi:poi-ooxml-schemas:3.13'
+    compile 'org.apache.poi:poi-scratchpad:3.13'
+    compile 'org.apache.logging.log4j:log4j-api:2.5'
+    compile 'org.apache.logging.log4j:log4j-core:2.5'
+    compile 'org.apache.commons:commons-lang3:3.1'
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
@@ -51,4 +52,4 @@ dependencies {
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
 }
-*/
+
