--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ repositories {
 sourceSets {
     main {
         resources.srcDirs = ['src/main/resources']
-        resources.includes = ['src/main/java/*.xml']
+        resources.includes = ['src/main/java/*.xml', 'src/main/resources/*.xml']
     }
 }
 
@@ -37,13 +37,14 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.7.18'
 
     compile 'com.alibaba:fastjson:1.1.26'
+    compile 'org.apache.logging.log4j:log4j-api:2.5'
+    compile 'org.apache.logging.log4j:log4j-core:2.5'
+    compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.5'
 
     compile 'org.apache.poi:poi:3.13'
     compile 'org.apache.poi:poi-ooxml:3.13'
     compile 'org.apache.poi:poi-ooxml-schemas:3.13'
     compile 'org.apache.poi:poi-scratchpad:3.13'
-    compile 'org.apache.logging.log4j:log4j-api:2.5'
-    compile 'org.apache.logging.log4j:log4j-core:2.5'
     compile 'org.apache.commons:commons-lang3:3.1'
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
